@@ -1,10 +1,0 @@
-name    'ptomulik-bsdportconfig'
-version '0.2.3'
-source 'git://git@github.com/ptomulik/puppet-bsdportconfig.git'
-author 'ptomulik'
-license 'Apache License, Version 2.0'
-summary 'Configure build options for FreeBSD ports.'
-description 'This module implements a bsdportconfig resource which helps to ensure, that certain configuration options are set (or unset) fo given BSD port.'
-project_page 'https://github.com/ptomulik/puppet-bsdportconfig'
-
-## Add dependencies, if any:
