@@ -1,0 +1,16 @@
+{
+  "name": "ptomulik-bsdportconfig",
+  "version": "0.2.3",
+  "author": "ptomulik",
+  "summary": "Configure build options for FreeBSD ports",
+  "license": "Apache-2.0",
+  "source": "https://github.com/ptomulik/puppet-bsdportconfig",
+  "project_page": "https://github.com/ptomulik/puppet-bsdportconfig",
+  "issues_url": "https://github.com/ptomulik/puppet-bsdportconfig/issues",
+  "description": "Configure build options for FreeBSD ports",
+  "dependencies": [
+  ],
+  "operatingsystem_support" : [
+        { "operatingsystem" : "FreeBSD" }
+  ]
+}
